Mon May 07 00:26:59 BST 2007  Olly Betts <olly@survex.com>

	* tests/harness/testsuite.h: Another tweak to TEST_EQUAL_DOUBLE().

Sun May 06 22:30:26 BST 2007  Olly Betts <olly@survex.com>

	* docs/quickstart.html: Remove reference to DA databases since the
	  muscat36 backend has been removed.  Update to recommend GCC 3.3
	  or later, as we do elsewhere.  Change references to "quartz" to
	  say "flint", or remove them.

Sun May 06 16:02:28 BST 2007  Olly Betts <olly@survex.com>

	* configure.ac: Set version to mythical 0.9.99.

Sun May 06 15:06:01 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* tests/api_db.cc: Add test_flintdatabaseformaterror1() which
	  checks what happens when an old-format flint database is opened.
	  It generates the old-format database by making a fake "iamflint"
	  file containing an old version number.

Sun May 06 04:00:39 BST 2007  Olly Betts <olly@survex.com>

	* expand/ortermlist.cc: Remove incorrect assertion check in
	  OrTermList::next(), replacing it with anexplanatory comment.

Sun May 06 02:42:30 BST 2007  Olly Betts <olly@survex.com>

	* net/remoteconnection.cc: Fix typo.

Sun May 06 02:39:23 BST 2007  Olly Betts <olly@survex.com>

	* net/remoteconnection.cc: Aha!  Richard's patch failed to compile
	  because stdlib.h was in "#ifndef __WIN32__" not "#ifdef __WIN32__".

Sun May 06 02:27:18 BST 2007  Olly Betts <olly@survex.com>

	* net/remoteconnection.cc: Protect _set_invalid_parameter_handler, etc
	  by _MSC_VER >= 1400 (MSVC 2005) and __STDC_SECURE_LIB__ (undocumented
	  but cribbed from the Python sources).  Refactor into a handy class
	  (MSVCIgnoreInvalidParameter) which just needs to be instantiated in
	  the scope where you want to allow invalid parameters to be passed.

Sun May 06 01:42:06 BST 2007  Olly Betts <olly@survex.com>

	* net/remoteconnection.cc: Rework use of _invalid_parameter_handler to
	  only apply when _MSC_VER is defined, to fix the mingw build.
