@@ -23,11 +23,16 @@
 #define OM_HGUARD_TESTSUITE_H
 
 #include "omstringstream.h"
+
+#include <algorithm>
 #include <iomanip>
 #include <iostream>
 #include <map>
 #include <string>
 #include <vector>
+
+#include <float.h> // for DBL_DIG
+#include <math.h> // for ceil, fabs, log10
 
 /** Class which is thrown when a test case fails.
  */
@@ -228,17 +233,15 @@ class test_driver {
 	"Expected `"STRINGIZE(a)"' and `"STRINGIZE(b)"' to be equal:" \
 	" were " << (a) << " and " << (b))
 
-#include <float.h> // for DBL_DIG
-#include <math.h> // for ceil, fabs, log10
 inline bool
 TEST_EQUAL_DOUBLE_helper(double a, double b)
 {
-    return (ceil(log10(max(fabs(a), fabs(b)))) - log10(fabs(a - b)) > DBL_DIG);
+    return (ceil(log10(std::max(fabs(a), fabs(b)))) - log10(fabs(a - b)) > DBL_DIG);
 }
 
 #define TEST_EQUAL_DOUBLE(a, b) TEST_AND_EXPLAIN(TEST_EQUAL_DOUBLE_helper((a), (b)), \
 	"Expected `"STRINGIZE(a)"' and `"STRINGIZE(b)"' to be (nearly) equal:" \
-	" were " << setprecision(DBL_DIG) << (a) << " and " << (b) << setprecision(6))
+	" were " << setprecision(DBL_DIG) << (a) << " and " << (b) << " (diff " << fabs((a) - (b)) << ", DBL_DIG = " << DBL_DIG << ")" << setprecision(6))
 
 /// Test for non-equality of two things.
 #define TEST_NOT_EQUAL(a, b) TEST_AND_EXPLAIN(((a) != (b)), \
